--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "strapi-provider-upload-qcloud-cos",
-  "version": "3.3.2",
-  "description": "Qcloud COS provider for strapi uploader",
+  "name": "strapi-provider-upload-tencent-cloud-cos",
+  "version": "3.4.0",
+  "description": "Qcloud COS provider for strapi uploader[fix]",
   "main": "index.js",
   "scripts": {
     "preversion": "git add -A",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/best-referenced/strapi-provider-upload-cos.git"
+    "url": "git+https://github.com/flxxyz/strapi-provider-upload-tencent-cloud-cos.git"
   },
   "keywords": [
     "strapi",
@@ -20,13 +20,13 @@
   "strapi": {
     "isProvider": true
   },
-  "author": "Wu Jun <gmail.com>",
+  "author": "Flxxyz <i@mdzz.name>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/best-referenced/strapi-provider-upload-cos/issues"
+    "url": "https://github.com/flxxyz/strapi-provider-upload-tencent-cloud-cos"
   },
-  "homepage": "https://github.com/best-referenced/strapi-provider-upload-cos",
+  "homepage": "https://github.com/flxxyz/strapi-provider-upload-tencent-cloud-cos",
   "dependencies": {
-    "cos-nodejs-sdk-v5": "^2.6.2"
+    "cos-nodejs-sdk-v5": "^2.9.6"
   }
 }
